k8s/vdo-ninja/coturn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
        - name: coturn
          image: coturn/coturn:latest
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 3478
              protocol: TCP
            - containerPort: 5349
              protocol: UDP
            - containerPort: 5349
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/coturn/turnserver.conf
              subPath: turnserver.conf
      volumes:
        - name: config
          configMap:
            name: coturn-config
---
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: default
spec:
  selector:
    app: coturn
  ports:
    - name: turn-udp
      port: 3478
      protocol: UDP
    - name: turn-tcp
      port: 3478
      protocol: TCP
  type: LoadBalancer # Or NodePort if no LoadBalancer is available
